funland/unifi-log-insight/unifi-log-insight/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-log-insight
  namespace: unifi-log-insight
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "unifi-log.batlab.io"
  rules:
    - backendRefs:
        - name: unifi-log-insight-web
          port: 8000
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
          - name: X-ULI-Proxy-Auth
            valueFrom:
              secretKeyRef:
                name: unifi-log-secret
                key: PROXY_HEADER_VALUE
